STLInspector/core/parserutils/TemporalLogicParser.py
# Generated from TemporalLogic.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class TemporalLogicParser ( Parser ):

    grammarFileName = "TemporalLogic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'['", u"','", u"']'", u"<INVALID>", 
                     u"'true'", u"'false'", u"'!'", u"'&'", u"'|'", u"'('", 
                     u"')'", u"'*'", u"'+'", u"'-'", u"'->'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'U'", u"'R'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"TOKEN_OPERATOR", u"TOKEN_TRUE", u"TOKEN_FALSE", 
                      u"TOKEN_NOT", u"TOKEN_AND", u"TOKEN_OR", u"TOKEN_LB", 
                      u"TOKEN_RB", u"TOKEN_MULT", u"TOKEN_ADD", u"TOKEN_SUB", 
                      u"TOKEN_IMPLIES", u"TOKEN_POSNUMBER", u"TOKEN_GLOBALLY", 
                      u"TOKEN_FINALLY", u"TOKEN_NEXT", u"TOKEN_UNTIL", u"TOKEN_RELEASE", 
                      u"TOKEN_VARIABLE", u"TOKEN_WS" ]

    RULE_pos_scaled_variable = 0
    RULE_formula = 1
    RULE_start = 2

    ruleNames =  [ u"pos_scaled_variable", u"formula", u"start" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    TOKEN_OPERATOR=4
    TOKEN_TRUE=5
    TOKEN_FALSE=6
    TOKEN_NOT=7
    TOKEN_AND=8
    TOKEN_OR=9
    TOKEN_LB=10
    TOKEN_RB=11
    TOKEN_MULT=12
    TOKEN_ADD=13
    TOKEN_SUB=14
    TOKEN_IMPLIES=15
    TOKEN_POSNUMBER=16
    TOKEN_GLOBALLY=17
    TOKEN_FINALLY=18
    TOKEN_NEXT=19
    TOKEN_UNTIL=20
    TOKEN_RELEASE=21
    TOKEN_VARIABLE=22
    TOKEN_WS=23

    def __init__(self, input, output=sys.stdout):
        super(TemporalLogicParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Pos_scaled_variableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TemporalLogicParser.Pos_scaled_variableContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TOKEN_VARIABLE(self):
            return self.getToken(TemporalLogicParser.TOKEN_VARIABLE, 0)

        def TOKEN_POSNUMBER(self):
            return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, 0)

        def TOKEN_MULT(self):
            return self.getToken(TemporalLogicParser.TOKEN_MULT, 0)

        def getRuleIndex(self):
            return TemporalLogicParser.RULE_pos_scaled_variable

        def enterRule(self, listener):
            if hasattr(listener, "enterPos_scaled_variable"):
                listener.enterPos_scaled_variable(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPos_scaled_variable"):
                listener.exitPos_scaled_variable(self)




    def pos_scaled_variable(self):

        localctx = TemporalLogicParser.Pos_scaled_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pos_scaled_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TemporalLogicParser.TOKEN_POSNUMBER:
                self.state = 6
                self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                self.state = 7
                self.match(TemporalLogicParser.TOKEN_MULT)


            self.state = 10
            self.match(TemporalLogicParser.TOKEN_VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TemporalLogicParser.FormulaContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TemporalLogicParser.RULE_formula

     
        def copyFrom(self, ctx):
            super(TemporalLogicParser.FormulaContext, self).copyFrom(ctx)


    class ImpliesCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.ImpliesCaseContext, self).__init__(parser)
            self.left = None # FormulaContext
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_IMPLIES(self):
            return self.getToken(TemporalLogicParser.TOKEN_IMPLIES, 0)
        def formula(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterImpliesCase"):
                listener.enterImpliesCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImpliesCase"):
                listener.exitImpliesCase(self)


    class TrueCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.TrueCaseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TOKEN_TRUE(self):
            return self.getToken(TemporalLogicParser.TOKEN_TRUE, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterTrueCase"):
                listener.enterTrueCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTrueCase"):
                listener.exitTrueCase(self)


    class BooleanVarCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.BooleanVarCaseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TOKEN_VARIABLE(self):
            return self.getToken(TemporalLogicParser.TOKEN_VARIABLE, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterBooleanVarCase"):
                listener.enterBooleanVarCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBooleanVarCase"):
                listener.exitBooleanVarCase(self)


    class FinallyCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.FinallyCaseContext, self).__init__(parser)
            self.leftlimit = None # Token
            self.rightlimit = None # Token
            self.child = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_FINALLY(self):
            return self.getToken(TemporalLogicParser.TOKEN_FINALLY, 0)
        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)

        def TOKEN_POSNUMBER(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_POSNUMBER)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterFinallyCase"):
                listener.enterFinallyCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFinallyCase"):
                listener.exitFinallyCase(self)


    class UntilCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.UntilCaseContext, self).__init__(parser)
            self.left = None # FormulaContext
            self.leftlimit = None # Token
            self.rightlimit = None # Token
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_UNTIL(self):
            return self.getToken(TemporalLogicParser.TOKEN_UNTIL, 0)
        def formula(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,i)

        def TOKEN_POSNUMBER(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_POSNUMBER)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterUntilCase"):
                listener.enterUntilCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUntilCase"):
                listener.exitUntilCase(self)


    class FalseCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.FalseCaseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TOKEN_FALSE(self):
            return self.getToken(TemporalLogicParser.TOKEN_FALSE, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterFalseCase"):
                listener.enterFalseCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFalseCase"):
                listener.exitFalseCase(self)


    class OrCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.OrCaseContext, self).__init__(parser)
            self.left = None # FormulaContext
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_OR(self):
            return self.getToken(TemporalLogicParser.TOKEN_OR, 0)
        def formula(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterOrCase"):
                listener.enterOrCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOrCase"):
                listener.exitOrCase(self)


    class AndCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.AndCaseContext, self).__init__(parser)
            self.left = None # FormulaContext
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_AND(self):
            return self.getToken(TemporalLogicParser.TOKEN_AND, 0)
        def formula(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterAndCase"):
                listener.enterAndCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAndCase"):
                listener.exitAndCase(self)


    class APCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.APCaseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def pos_scaled_variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.Pos_scaled_variableContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.Pos_scaled_variableContext,i)

        def TOKEN_OPERATOR(self):
            return self.getToken(TemporalLogicParser.TOKEN_OPERATOR, 0)
        def TOKEN_POSNUMBER(self):
            return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, 0)
        def TOKEN_ADD(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_ADD)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_ADD, i)
        def TOKEN_SUB(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_SUB)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_SUB, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterAPCase"):
                listener.enterAPCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAPCase"):
                listener.exitAPCase(self)


    class ReleaseCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.ReleaseCaseContext, self).__init__(parser)
            self.left = None # FormulaContext
            self.leftlimit = None # Token
            self.rightlimit = None # Token
            self.right = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_RELEASE(self):
            return self.getToken(TemporalLogicParser.TOKEN_RELEASE, 0)
        def formula(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TemporalLogicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,i)

        def TOKEN_POSNUMBER(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_POSNUMBER)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterReleaseCase"):
                listener.enterReleaseCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitReleaseCase"):
                listener.exitReleaseCase(self)


    class NotCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.NotCaseContext, self).__init__(parser)
            self.child = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_NOT(self):
            return self.getToken(TemporalLogicParser.TOKEN_NOT, 0)
        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterNotCase"):
                listener.enterNotCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNotCase"):
                listener.exitNotCase(self)


    class GloballyCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.GloballyCaseContext, self).__init__(parser)
            self.leftlimit = None # Token
            self.rightlimit = None # Token
            self.child = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_GLOBALLY(self):
            return self.getToken(TemporalLogicParser.TOKEN_GLOBALLY, 0)
        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)

        def TOKEN_POSNUMBER(self, i=None):
            if i is None:
                return self.getTokens(TemporalLogicParser.TOKEN_POSNUMBER)
            else:
                return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterGloballyCase"):
                listener.enterGloballyCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGloballyCase"):
                listener.exitGloballyCase(self)


    class NextCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.NextCaseContext, self).__init__(parser)
            self.offset = None # Token
            self.child = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_NEXT(self):
            return self.getToken(TemporalLogicParser.TOKEN_NEXT, 0)
        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)

        def TOKEN_POSNUMBER(self):
            return self.getToken(TemporalLogicParser.TOKEN_POSNUMBER, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterNextCase"):
                listener.enterNextCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNextCase"):
                listener.exitNextCase(self)


    class BracketCaseContext(FormulaContext):

        def __init__(self, parser, ctx): # actually a TemporalLogicParser.FormulaContext)
            super(TemporalLogicParser.BracketCaseContext, self).__init__(parser)
            self.child = None # FormulaContext
            self.copyFrom(ctx)

        def TOKEN_LB(self):
            return self.getToken(TemporalLogicParser.TOKEN_LB, 0)
        def TOKEN_RB(self):
            return self.getToken(TemporalLogicParser.TOKEN_RB, 0)
        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterBracketCase"):
                listener.enterBracketCase(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBracketCase"):
                listener.exitBracketCase(self)



    def formula(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TemporalLogicParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = TemporalLogicParser.TrueCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 13
                self.match(TemporalLogicParser.TOKEN_TRUE)
                pass

            elif la_ == 2:
                localctx = TemporalLogicParser.FalseCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                self.match(TemporalLogicParser.TOKEN_FALSE)
                pass

            elif la_ == 3:
                localctx = TemporalLogicParser.BooleanVarCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 15
                self.match(TemporalLogicParser.TOKEN_VARIABLE)
                pass

            elif la_ == 4:
                localctx = TemporalLogicParser.APCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB:
                    self.state = 16
                    _la = self._input.LA(1)
                    if not(_la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 19
                self.pos_scaled_variable()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB:
                    self.state = 20
                    _la = self._input.LA(1)
                    if not(_la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 21
                    self.pos_scaled_variable()
                    self.state = 26
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 27
                self.match(TemporalLogicParser.TOKEN_OPERATOR)
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB:
                    self.state = 28
                    _la = self._input.LA(1)
                    if not(_la==TemporalLogicParser.TOKEN_ADD or _la==TemporalLogicParser.TOKEN_SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 31
                self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                pass

            elif la_ == 5:
                localctx = TemporalLogicParser.NotCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 33
                self.match(TemporalLogicParser.TOKEN_NOT)
                self.state = 34
                localctx.child = self.formula(10)
                pass

            elif la_ == 6:
                localctx = TemporalLogicParser.GloballyCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 35
                self.match(TemporalLogicParser.TOKEN_GLOBALLY)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TemporalLogicParser.T__0:
                    self.state = 36
                    self.match(TemporalLogicParser.T__0)
                    self.state = 37
                    localctx.leftlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                    self.state = 38
                    self.match(TemporalLogicParser.T__1)
                    self.state = 39
                    localctx.rightlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                    self.state = 40
                    self.match(TemporalLogicParser.T__2)


                self.state = 43
                localctx.child = self.formula(6)
                pass

            elif la_ == 7:
                localctx = TemporalLogicParser.FinallyCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self.match(TemporalLogicParser.TOKEN_FINALLY)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TemporalLogicParser.T__0:
                    self.state = 45
                    self.match(TemporalLogicParser.T__0)
                    self.state = 46
                    localctx.leftlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                    self.state = 47
                    self.match(TemporalLogicParser.T__1)
                    self.state = 48
                    localctx.rightlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                    self.state = 49
                    self.match(TemporalLogicParser.T__2)


                self.state = 52
                localctx.child = self.formula(5)
                pass

            elif la_ == 8:
                localctx = TemporalLogicParser.NextCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(TemporalLogicParser.TOKEN_NEXT)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TemporalLogicParser.T__0:
                    self.state = 54
                    self.match(TemporalLogicParser.T__0)
                    self.state = 55
                    localctx.offset = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                    self.state = 56
                    self.match(TemporalLogicParser.T__2)


                self.state = 59
                localctx.child = self.formula(4)
                pass

            elif la_ == 9:
                localctx = TemporalLogicParser.BracketCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.match(TemporalLogicParser.TOKEN_LB)
                self.state = 61
                localctx.child = self.formula(0)
                self.state = 62
                self.match(TemporalLogicParser.TOKEN_RB)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = TemporalLogicParser.AndCaseContext(self, TemporalLogicParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 66
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 67
                        self.match(TemporalLogicParser.TOKEN_AND)
                        self.state = 68
                        localctx.right = self.formula(10)
                        pass

                    elif la_ == 2:
                        localctx = TemporalLogicParser.OrCaseContext(self, TemporalLogicParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 69
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 70
                        self.match(TemporalLogicParser.TOKEN_OR)
                        self.state = 71
                        localctx.right = self.formula(9)
                        pass

                    elif la_ == 3:
                        localctx = TemporalLogicParser.ImpliesCaseContext(self, TemporalLogicParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 72
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 73
                        self.match(TemporalLogicParser.TOKEN_IMPLIES)
                        self.state = 74
                        localctx.right = self.formula(8)
                        pass

                    elif la_ == 4:
                        localctx = TemporalLogicParser.UntilCaseContext(self, TemporalLogicParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 75
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 76
                        self.match(TemporalLogicParser.TOKEN_UNTIL)
                        self.state = 82
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==TemporalLogicParser.T__0:
                            self.state = 77
                            self.match(TemporalLogicParser.T__0)
                            self.state = 78
                            localctx.leftlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                            self.state = 79
                            self.match(TemporalLogicParser.T__1)
                            self.state = 80
                            localctx.rightlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                            self.state = 81
                            self.match(TemporalLogicParser.T__2)


                        self.state = 84
                        localctx.right = self.formula(4)
                        pass

                    elif la_ == 5:
                        localctx = TemporalLogicParser.ReleaseCaseContext(self, TemporalLogicParser.FormulaContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 85
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 86
                        self.match(TemporalLogicParser.TOKEN_RELEASE)
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==TemporalLogicParser.T__0:
                            self.state = 87
                            self.match(TemporalLogicParser.T__0)
                            self.state = 88
                            localctx.leftlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                            self.state = 89
                            self.match(TemporalLogicParser.T__1)
                            self.state = 90
                            localctx.rightlimit = self.match(TemporalLogicParser.TOKEN_POSNUMBER)
                            self.state = 91
                            self.match(TemporalLogicParser.T__2)


                        self.state = 94
                        localctx.right = self.formula(3)
                        pass

             
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TemporalLogicParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.child = None # FormulaContext

        def EOF(self):
            return self.getToken(TemporalLogicParser.EOF, 0)

        def formula(self):
            return self.getTypedRuleContext(TemporalLogicParser.FormulaContext,0)


        def getRuleIndex(self):
            return TemporalLogicParser.RULE_start

        def enterRule(self, listener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)




    def start(self):

        localctx = TemporalLogicParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            localctx.child = self.formula(0)
            self.state = 101
            self.match(TemporalLogicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.formula_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def formula_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 2)
         




